--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -4,10 +4,11 @@
     - {name: "QGIS.sk", description: "Slovak QGIS User Group", link: "https://qgis.sk/", imageUrl: "qgis-sk-logo.svg"}
     - {name: "QGIS.org", description: "QGIS.ORG Association", link: "https://qgis.org/", imageUrl: "qgis-logo.svg"}
 
-# - group: "Gold Sponsors"
-#   height: 70
-#   elements:
-#     - {name: "Kontur", description: "", link: "/sponsors/sponsor_kontur", imageUrl: "Kontur_logo_main.svg"}
+- group: "Gold Sponsors"
+  height: 180
+  elements:
+    - {name: "ESA", description: "European Space Agency", link: "https://www.esa.int/", imageUrl: "esa-logo.png"}
+    - {name: "Lutra Consulting", description: "Lutra Consulting", link: "https://www.lutraconsulting.co.uk/", imageUrl: "lutra-logo.png"}
 
 # - group: "Bronze Sponsors"
 #   height: 60
