Add solargis as a bronze sponsor

--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -15,3 +15,4 @@
   height: 40
   elements:
     - {name: "Rasterra", description: "Rasterra", link: "https://www.rasterra.nl/", imageUrl: "rasterra-logo.svg"}
+    - {name: "Solargis", description: "Solargis", link: "https://www.solargis.com/", imageUrl: "solargis-logo.svg"}
