Add Schedule, remove call for papers

--- a/_config.yml
+++ b/_config.yml
@@ -43,8 +43,8 @@ navigationLinks:
   permalink: "/about"
   text: "About"
  -
-  permalink: "/call-for-papers"
-  text: "Call For Papers"
+  permalink: "/schedule"
+  text: "Schedule"
  -
   permalink: "/sponsors"
   text: "Sponsors"
