--- a/_data/speakers.yml
+++ b/_data/speakers.yml
@@ -1,56 +1,54 @@
 -
   id: 1
-  name: "Marco"
-  surname: "Bernasocchi"
+  name: "Kurt"
+  surname: "Menke"
   company: ""
   title: ""
-  bio: '<p>Marco Bernasocchi is an open-source advocate, entrepreneur and full-stack geoninja. He is the creator of QField for QGIS, currently serves as QGIS.org Chair, and is an Open Source Geospatial Foundation board member. In his day job, Marco is the CEO of OPENGIS.ch, which he founded in 2011.<br>A geographer by trade, Marco lives in a small Romansh-speaking mountain village in Switzerland, where he loves scrambling around the mountains to enjoy the feeling of freedom it gives him. Outgoing, flexible and open-minded, Marco fluently speaks five languages. The best thing is: He not only knows how to say it but also loves sharing his know-how.</p>'
-  thumbnailUrl: Marco_Bernasocchi.jpg
+  bio: ''
+  thumbnailUrl: kurt-menke.jpg
   rockstar: true
 -
   id: 2
-  name: "Bonny"
-  surname: "McClain"
+  name: "Anita"
+  surname: "Graser"
   company: ""
   title: ""
-  bio: '<p>Bonny is a geospatial analyst and self described human geographer and social anthropologist. Exploring geographic properties that capture complex interactions, dynamic shifts in ecosystem balance and how activities influence eco-geomorphic conceptual frameworks across a variety of environments are topics of popular public talks and panel discussions.<br />The ability to apply advanced data analytics, including data engineering and geo-enrichment, to poverty, race, and gender discussions targets judgments about structural determinants, racial equity, and elements of intersectionality to illuminate the confluence of metrics contributing to poverty.<br />Bonny is the author of books Python for Geospatial Data Analysis: Theory, Tools, and Practice for Location Intelligence (publisher, O’Reilly Media) and Geospatial Analysis with SQL: A hands on guide to performing geospatial analysis by unlocking the syntax of spatial SQL published by Packt Press. Current projects include a new book in progress with Locate Press, Geospatial Data Science & the Art of Storytelling.</p>'
-  thumbnailUrl: Bonny_McClain.jpg
+  bio: ""
+  thumbnailUrl: anita-graser.jpg
   rockstar: true
 -
   id: 3
-  name: "Lorik"
-  surname: "Haxhiu"
+  name: "Tim"
+  surname: "Sutton"
   company: ""
   title: ""
-  bio: '<p>Lorik Haxhiu, PhD. has over two decades of experience in Kosovo’s energy and natural resource sectors, where he has taken on various roles and successfully carried out technical assistance programs and projects funded by USAID, EU, World Bank and other international organizations.
-<br>GIS integration is vital for his projects as it supports them in every stage from development to planning to implementation and delivery, offering valuable outcomes for beneficiaries and stakeholders.
-<br>He currently runs a small consulting firm that specializes in environmental remediation and sustainable energy solutions.</p>'
-  thumbnailUrl: Lorik_Haxhiu.jpg
+  bio: ''
+  thumbnailUrl: tim-sutton.jpg
   rockstar: true
 -
   id: 4
-  name: "Said"
-  surname: "Turksever"
+  name: "Hans"
+  surname: "van der Kwast"
   company: ""
   title: ""
-  bio: "<p>Said is the Community Project Manager at Meta. Said supports Meta’s Mapillary and OpenStreetMap community activities across the globe. Said is Geomatic Engineer and has a Master's degree in Geoinfoirmatics Engineering from Politecnico di Milano. He is originally from Turkey and now lives in London, UK. He is active in building the OpenStreetMap community in Turkey and interested in mapping POIs and its accessibilities.</p>"
-  thumbnailUrl: Said_Turksever.jpg
+  bio: ''
+  thumbnailUrl: hans-van-der-kwast.jpg
   rockstar: true
 -
   id: 5
-  name: "Miriam"
-  surname: "Gonzalez"
+  name: "Ujaval"
+  surname: "Gandhi"
   company: ""
   title: ""
-  bio: '<p>Miriam has built a career in Geospatial startups. She is Geochicas co-founder, participates in the FIRE Forum as Earth Observation Evangelist in the Energy sector, former President of the Board in HOTOSM and she is doing Partnerships at UP42. Miriam is passionate about how Geospatial data and Earth Observation technologies can change the world.</p>'
-  thumbnailUrl: Miriam_Gonzalez.jpg
+  bio: ""
+  thumbnailUrl: ujaval-gandhi.jpg
   rockstar: true
 -
   id: 6
-  name: "Jan"
-  surname: "Burdziej"
+  name: "Saber"
+  surname: "Razmjooei"
   company: ""
   title: ""
-  bio: "<p>Jan works as the Geospatial Lead at UNICEF. He has over 18 years of experience on various positions, including proven track record of implementing GIS solutions for UN agencies (UNICEF, UNDP), national statistical offices, environmental agencies, oil & gas industry and private businesses. At UNICEF he is leading the implementation of the geospatial strategy, which includes designing, developing and managing the roll-out of commercial and open-source GIS platforms.</p>"
-  thumbnailUrl: Jan_Burdziej.jpg
+  bio: ""
+  thumbnailUrl: saber-razmjooei.jpg
   rockstar: true
