--- a/_data/team-loc.yml
+++ b/_data/team-loc.yml
@@ -18,3 +18,6 @@
   surname: "Michalko"
   title: ""
   thumbnailUrl: "Michalko_Miloslav.jpg"
+- name: "Alexandra"
+  surname: "Bucha Rasova"
+  thumbnailUrl: "Alexandra_Bucha_Rasova.jpg"
