Added Tibor to the LOC team

--- a/_data/team-loc.yml
+++ b/_data/team-loc.yml
@@ -21,3 +21,6 @@
 - name: "Alexandra"
   surname: "Bucha Rasova"
   thumbnailUrl: "Alexandra_Bucha_Rasova.jpg"
+- name: "Tibor"
+  surname: "Lieskovsky"
+  thumbnailUrl: "Tibor_Lieskovsky.jpg"
