Added Jakub to the team

--- a/_data/team-loc.yml
+++ b/_data/team-loc.yml
@@ -24,3 +24,6 @@
 - name: "Tibor"
   surname: "Lieskovsky"
   thumbnailUrl: "Tibor_Lieskovsky.jpg"
+- name: "Jakub"
+  surname: "Fuska"
+  thumbnailUrl: "Jakub_Fuska.jpg"
