--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -22,6 +22,7 @@
     - {name: "Atapex", description: "Atapex", link: "https://www.atapex.sk/", imageUrl: "atapex-logo.svg", height: 50}
     - {name: "WhereGroup", description: "WhereGroup", link: "https://wheregroup.com/", imageUrl: "wheregroup-logo.svg", height: 65}
     - {name: "EnviroSolutions", description: "EnviroSolutions", link: "https://envirosolutions.pl/", imageUrl: "envirosolutions-logo.svg", height: 50}
+    - {name: "QWAST", description: "QWAST", link: "https://www.qwast-gis.com/", imageUrl: "qwast-logo.svg", height: 70}
 
 - group: "Supporters"
   height: 40
